# secure-file-locker

./: README.md
secure-file-locker/: pyproject.toml
secure-file-locker/docs/: THREAT_MODEL.md
secure-file-locker/examples/: quickstart.sh
secure-file-locker/src/locker/: __init__.py  backup.py  cli.py  config.py  crypto.py  key_management.py  logging_utils.py  manifest.py  restore.py
secure-file-locker/src/safeguards/: canary.py  guardrails.py
secure-file-locker/tests/: test_smoke.py
